# WriterOS

./: .cursorrules  .dockerignore  .env.example  .gitignore  =0.1.0  AGENTS.md  AGENT_EXECUTION_TRACKING.md  AGENT_GAPS.md  AI_CONTEXT.md  ALEMBIC_MIGRATION_COMPLETE.md  APPROVED_REFACTOR_PLAN.md  ASOIAF_DIAGNOSTIC_REPORT.md  Agent.py  DUAL_MODE_OUTPUT_IMPLEMENTATION.md  ENHANCEMENTS_SUMMARY.md  EXECUTION_TRACKING_SUMMARY.md  FASTEMBED_MIGRATION_SUMMARY.md  FINAL_TEST_RESULTS.txt  IMPLEMENTATION_PLAN_HIGH_PRIORITY.md  IMPLEMENTATION_SUMMARY_2025-11-26.md  LANGCHAIN_LANGGRAPH_IMPLEMENTATION.md  LANGCHAIN_VS_ORIGINAL.md  LICENSE.txt  LOG_STORAGE_AND_CLI_GUIDE.md  Makefile  NARRATIVE_CHUNKER_INTEGRATION.md  OPENAI_EMBEDDING_INTEGRATION.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE_2.5_COMPLETE.md  PHASE_2_COMPLETE.md  README.md  README_PHASE_2.5.md  REFACTOR_FEASIBILITY_2025.md  TEMPORAL_RAG_IMPLEMENTATION.md  TESTING_GUIDE.md  TESTS_WORKING.md  TEST_RESULTS_COMPLETE.txt  (+85 more)
.claude/: CODING_STANDARDS.md  CONTEXT_BUILDER_DESIGN.md  GRAPH_ENHANCED_RETRIEVAL.md  OUTPUT_CLEANUP.md  PROJECT_OVERVIEW.md  QUICK_REFERENCE.md  SMART_CONTEXT_FORMATTER.md  TDD_IMPLEMENTATION_SUMMARY.md  TROUBLESHOOTING_PROTOCOL.md  USAGE_EXAMPLES.md
.writeros/: vault_id
agents/: __init__.py  architect.py  base.py  chronologist.py  dramatist.py  mechanic.py  orchestrator.py  producer.py  profiler.py  psychologist.py  schema.py  stylist.py  theorist.py
ai_context/: dev1_agentic_architecture_analysis.md  dev1_entity_type_column_resolution.md  dev1_phase1_phase2_implementation.md
docker/: Dockerfile  docker-compose.yml
docs/: CHUNKING_SYSTEM.md  CITADEL_PIPELINE_GUIDE.md  CLUSTER_SEMANTIC_INTEGRATION.md  CONNECTION_POOLING.md  ENVIRONMENT_SETUP.md  ERROR_HANDLING.md  api.md  (+8 more)
(+184 files in other folders)
