[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "writeros"
version = "0.1.0"
description = "AI-powered writing assistant for epic fantasy authors"
authors = [{name = "WriterOS Team"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlmodel>=0.0.14",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.4",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "openai>=1.10.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "httpx>=0.27",
    "testcontainers>=3.7",
    "vcrpy>=5.1.0",
    "faker>=22.0.0",
]

[project.scripts]
writeros = "writeros.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=src/writeros --cov-report=term-missing --cov-report=html"
markers = [
    "unit: Unit tests (fast, mocked)",
    "integration: Integration tests (requires Docker)",
    "e2e: End-to-end tests (full pipeline)",
    "slow: Slow tests (>1 second)",
]

[tool.coverage.run]
source = ["src/writeros"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
